manage-contacts alignments issues fixed

--- a/src/assets/global/css/components-rounded.css
+++ b/src/assets/global/css/components-rounded.css
@@ -2318,7 +2318,7 @@ Customized Bootstrap Buttons
 .btn-xs > [class^="glyphicon-"],
 .btn-xs > [class*=" glyphicon-"],
 .btn-xs > i {
-  font-size: 11px;
+  font-size: 12px;
 }
 
 .btn-group.btn-group-circle > .btn:first-child {
@@ -5928,8 +5928,8 @@ Custom tables
 }
 
 .table thead tr th {
-  font-size: 14px;
-  font-weight: 600;
+  font-size: 12px;
+  font-weight: 800;
 }
 
 .table-advance {
